--- a/lessonpage.html
+++ b/lessonpage.html
@@ -66,7 +66,8 @@
           <div id="tocList" class="card" style="padding: 12px; margin: 0"></div>
         </div>
 
-        <div id="lessonContent" class="lessonHtml" style="display: none"></div>
+        <div id="lessonContent" class="card lessonSurface lessonHtml" style="display: none"></div>
+        <div id="lessonSticky" class="lessonSticky" style="display:none;"></div>
         <div id="lessonEmpty" class="empty" style="display: none"></div>
 
         <div class="hintSmall" id="studentHint" style="display: none"></div>
